testapp/comnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: comnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/comnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/comnet: "true"
